--- a/TutByTest/.settings/org.eclipse.core.resources.prefs
+++ b/TutByTest/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
 eclipse.preferences.version=1
-encoding//src/TestFlow.java=UTF-8
+encoding//src/TestFlowTutBy.java=UTF-8
 encoding//src/TutByTest.java=UTF-8
