--- a/TutByTest/.settings/org.eclipse.core.resources.prefs
+++ b/TutByTest/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/com/BrowsersTest/TestFlowGmail.java=UTF-8
 encoding//src/com/BrowsersTest/TestFlowTutBy.java=UTF-8
 encoding//src/com/BrowsersTest/TutByAndGmailTest.java=UTF-8
